build/jeeves-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jeeves-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: jeeves.services
      http:
        paths:
          - pathType: Prefix
            path: /events(/|$)(.*)
            backend:
              service:
                name: events-service
                port:
                  number: 80
